Add image name and link changes to ReadMe

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             </div>
             <h3 id="sight" class="senses-info-right"> Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
             <div class="solid-blue solid-background">
-                <img src="./assets/images/play_by_sight.jpg"
+                <img src="./assets/images/play-by-sight.jpg"
                     alt="a young girl and her grandmother circling their eyes with their hands like glasses"
                     class="square-image play-by-pic">
                 <p class="right-align">
@@ -86,7 +86,7 @@
             <h3 id="sound" class="senses-info-left">Sound <i class="fas fa-assistive-listening-systems"
                     aria-hidden="true"></i></h3>
             <div class="solid-pink solid-background">
-                <img src="./assets/images/play_by_sound.jpg"
+                <img src="./assets/images/play-by-sound.jpg"
                     alt="a young girl holding up a home made tin and string phone to her ear"
                     class="square-image play-by-pic">
                 <p class="left-align">
@@ -102,7 +102,7 @@
             </div>
             <h3 id="smell" class="senses-info-right">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
             <div class="solid-grey solid-background">
-                <img src="./assets/images/play_by_smell.jpg" alt="a young girl smelling a flower"
+                <img src="./assets/images/play-by-smell.jpg" alt="a young girl smelling a flower"
                     class="square-image play-by-pic">
                 <p class="right-align">
                     The sense of smell helps children to identify scents they like or don’t like and can be incorporated
@@ -114,7 +114,7 @@
             </div>
             <h3 id="touch" class="senses-info-left">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
             <div class="solid-green solid-background">
-                <img src="./assets/images/play_by_touch.jpg" alt="a young girl playing with a bead and metal toy"
+                <img src="./assets/images/play-by-touch.jpg" alt="a young girl playing with a bead and metal toy"
                     class="square-image play-by-pic">
                 <p class="left-align">
                     The sense of touch can be best explored through textures and messy play. Young babies like to
@@ -126,7 +126,7 @@
             </div>
             <h3 id="taste" class="senses-info-right">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
             <div class="solid-peach solid-background">
-                <img src="./assets/images/play_with_mum.jpg"
+                <img src="./assets/images/play-with-mum.jpg"
                     alt="a young mum and her daughter sorting through drinking cups" class="square-image play-by-pic">
                 <p class="right-align">
                     Through the sense of taste children will get to explore new foods, fruits and vegetables and decide
@@ -174,13 +174,13 @@
             <h3 class="sections-headers">Top 10 Activities</h3>
             <div id="top10-pane">
                 <div id=play-images>
-                    <img src="assets/images/play_dough.jpg" alt="a young boy holding play dough in his hands"
+                    <img src="assets/images/play-dough.jpg" alt="a young boy holding play dough in his hands"
                         class=" square-image play-image-internal">
 
-                    <img src="assets/images/water_play.jpg" alt="a young boy holding up a hose pipe and spraying water"
+                    <img src="assets/images/water-play.jpg" alt="a young boy holding up a hose pipe and spraying water"
                         class=" square-image play-image-internal">
 
-                    <img src="assets/images/mud_play.jpg"
+                    <img src="assets/images/mud-play.jpg"
                         alt="multiple hands playing in a pile of mud and covered in mud"
                         class="square-image play-image-internal">
                 </div>
@@ -297,7 +297,7 @@
             https://nurtureandthriveblog.com/mindful-and-sensory-activities-for-children/#:~:text=Sensory%20activities%20help%20your%20child,can't%20seem%20to%20shake.
             Code was written by me except for Tooltip which is separately referenced below-->
             <h2 id="sec4" class="sections-headers">Help with Anxiety</h2>
-            <img src="assets/images/child_anxiety.jpg"
+            <img src="assets/images/child-anxiety.jpg"
                 alt="a little girl in a red dress reflection of herself shows her in dark colours" id="anxiety-img">
             <br>
             <br>
@@ -323,7 +323,7 @@
             </h3>
             <div id="anxiety-pane">
                 <figure class="grid-figure">
-                    <img src="assets/images/scavenger_hunt.jpg" alt="a scavenger hunt map" class="anxiety-activity">
+                    <img src="assets/images/scavenger-hunt.jpg" alt="a scavenger hunt map" class="anxiety-activity">
                     <figcaption>
                         <div class="tooltip">1. Sensory Scavenger Hunt.<span class="tooltiptext">A sensory scavenger
                                 hunt
@@ -344,7 +344,7 @@
                                 a bonus of calming aromatherapy oil.</span></div>
                     </figcaption>
                 </figure>
-                <figure class="grid-figure"><img src="assets/images/play_water.jpg"
+                <figure class="grid-figure"><img src="assets/images/play-water.jpg"
                         alt="a little boy splashing through water" class="anxiety-activity">
                     <figcaption>
                         <div class="tooltip">3. Play in Water.<span class="tooltiptext">There is something about kids
@@ -368,7 +368,7 @@
                                 brain.</span></div>
                     </figcaption>
                 </figure>
-                <figure class="grid-figure"><img src="assets/images/glitter_jar.jpg"
+                <figure class="grid-figure"><img src="assets/images/glitter-jar.jpg"
                         alt="a jar of gold glitter spilling onto the floor" class="anxiety-activity">
                     <figcaption>
                         <div class="tooltip">5. Make a Sensory Glitter Jar.<span class="tooltiptext">These jars are
