--- a/feedback.html
+++ b/feedback.html
@@ -55,7 +55,7 @@
                 <div class="solid-peach feedback-section senses-info-left">
                     <div class="feedback-grid">
                         <div class="feedback-image">
-                            <img src="assets/images/dad_1.jpg" alt="a dad's profile picture" class="profile-pictures">
+                            <img src="assets/images/dad-1.jpg" alt="a dad's profile picture" class="profile-pictures">
                         </div>
                         <div>
                             <h6 class="feedback-heading">Simon Jeffery, Child age 6</h6>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="feedback-grid">
                         <div class="feedback-image">
-                            <img src="assets/images/teacher_1.jpg" alt="a profile picture of a woman"
+                            <img src="assets/images/teacher-1.jpg" alt="a profile picture of a woman"
                                 class="profile-pictures"></div>
                         <div>
                             <h6 class="feedback-heading">Fiona Williams, Nursery Teacher</h6>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="feedback-grid">
                         <div class="feedback-image">
-                            <img src="assets/images/mum_3.jpg" alt="a mum's profile picture" class="profile-pictures">
+                            <img src="assets/images/mum-3.jpg" alt="a mum's profile picture" class="profile-pictures">
                         </div>
                         <div>
                             <h6 class="feedback-heading">Debbie Angus, Children 1, 5 and 7</h6>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="feedback-grid">
                         <div class="feedback-image">
-                            <img src="assets/images/mum_1.jpg" alt="a mum's profile picture" class="profile-pictures">
+                            <img src="assets/images/mum-1.jpg" alt="a mum's profile picture" class="profile-pictures">
                         </div>
                         <div>
                             <h6 class="feedback-heading">Jeanie Marks, Children 2 and 4</h6>
@@ -131,7 +131,7 @@
                 <div class="solid-pink feedback-section senses-info-left">
                     <div class="feedback-grid">
                         <div class="feedback-image">
-                            <img src="assets/images/mum_4.jpg" alt="a mum's profile picture" class="profile-pictures">
+                            <img src="assets/images/mum-4.jpg" alt="a mum's profile picture" class="profile-pictures">
                         </div>
                         <div>
                             <h6 class="feedback-heading">Angela Jacobs, Children ages 1 and 3</h6>
@@ -150,7 +150,7 @@
                     </div>
                     <div class="feedback-grid">
                         <div class="feedback-image">
-                            <img src="assets/images/mum_2.jpg" alt="a mum's profile picture" class="profile-pictures">
+                            <img src="assets/images/mum-2.jpg" alt="a mum's profile picture" class="profile-pictures">
                         </div>
                         <div>
                             <h6 class="feedback-heading">Jessica Suitcliffe, Child age 8</h6>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="feedback-grid">
                         <div class="feedback-image">
-                            <img src="assets/images/teacher_2.jpg" alt="a woman's profile picture"
+                            <img src="assets/images/teacher-2.jpg" alt="a woman's profile picture"
                                 class="profile-pictures">
                         </div>
                         <div>
@@ -186,7 +186,7 @@
                     </div>
                     <div class="feedback-grid">
                         <div class="feedback-image">
-                            <img src="assets/images/dad_2.jpg" alt="a dad's profile picture" class="profile-pictures">
+                            <img src="assets/images/dad-2.jpg" alt="a dad's profile picture" class="profile-pictures">
                         </div>
                         <div>
                             <h6 class="feedback-heading">Andrew Edwards, Children 3 and 7</h6>
