--- a/feedback.html
+++ b/feedback.html
@@ -39,7 +39,7 @@
                     </div>
                 </li>
                 <li><a href="javascript:void(0)" class="active">Hear From Each Other</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="contact.html">Get In Touch</a></li>
             </ul>
         </nav>
     </header>
