Add changes to @media queries while testing display

--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,7 @@
             <div id="contact-us-heading">
                <h2> Get In Touch</h2>
                <h3>We would love to hear from you</h3>
+               <img src="assets/images/contact-us-small.jpg" alt="young boy playing in sandpit" id="young-boy-sandpit">
                <div id="contact-us-area">
                   <div id="form-background">
                      <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
