--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                      be experiencing. Most of all they will have fun!
                   </p>
                   <h3 class="text-area">What can I do as a parent?</h3>
+                  <!--The onclick code was taken from the following stack overflow chat https://stackoverflow.com/questions/2906582/how-to-create-an-html-button-that-acts-like-a-link#:~:text=The%20plain%20HTML%20way%20is,URL%20in%20the%20action%20attribute.&text=If%20necessary%2C%20set%20CSS%20display,type%3D%22submit%22%3E%20.-->
                   <button id="learn-more" onclick="location.href='about.html'">Learn More</button>
                </div>
             </div>
