Add style changes for optimal performance

--- a/feedback.html
+++ b/feedback.html
@@ -39,7 +39,7 @@
                   <a href="about.html#sec4">Help with Anxiety</a>
                </div>
             </li>
-            <li><a href="javascript:void(0)" class="active">Hear From Each Other</a></li>
+            <li><a href="feedback.html" class="active">Hear From Each Other</a></li>
             <li><a href="contact.html">Get In Touch</a></li>
          </ul>
       </nav>
