--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                   https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->
             <li><a href="index.html">Home</a></li>
             <li class="dropdown">
-               <a href="javascript:void(0)" class="dropbtn active">All About
+               <a href="about.html" class="dropbtn active">All About
                   Sensory Play</a>
                <div class="dropdown-content">
                   <a href="about.html#sec1">What is Sensory Play?</a>
