--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                </div>
             </li>
             <li><a href="feedback.html">Hear From Each Other</a></li>
-            <li><a href="javascript:void(0)" class="active">Get In Touch</a></li>
+            <li><a href="contact.html" class="active">Get In Touch</a></li>
          </ul>
       </nav>
    </header>
