--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <ul>
             <!--Dropdown from W3 school tutorial for dropdown menu - adjusted for this site
                   https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->
-            <li><a href="javascript:void(0)" class="active">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li class="dropdown">
                <a href="about.html" class="dropbtn">All About
                   Sensory Play</a>
