Add changes to optimise page rendering

--- a/about.html
+++ b/about.html
@@ -406,12 +406,12 @@
          <p>Copyright@ClairePotter2021</p>
       </div>
       <ul>
-         <li><a href="https://www.facebook.com/" target="_blank" aria-label="a link to facebook"><i
+         <li><a href="https://www.facebook.com/" target="_blank" aria-label="a link to facebook" rel="noreferrer"><i
                   class="fab fa-facebook-square"></i></a></li>
-         <li><a href="https://www.instagram.com/" target="_blank" aria-label="a link to instagram"><i
+         <li><a href="https://www.instagram.com/" target="_blank" aria-label="a link to instagram" rel="noreferrer"><i
                   class="fab fa-instagram-square"></i></a>
          </li>
-         <li><a href="https://twitter.com/" target="_blank" aria-label="a link to twitter"><i
+         <li><a href="https://twitter.com/" target="_blank" aria-label="a link to twitter" rel="noreferrer"><i
                   class="fab fa-twitter-square"></i></a></li>
       </ul>
    </footer>
