Adjust styling for various screen sizes

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       <section>
          <!--About Page top of page-->
          <div id="about-menu">
-            <h2>All About Sensory Play</h2>
+            <h2 id="feedback-heading">All About Sensory Play</h2>
          </div>
       </section>
       <section>
