Add last optimisation style changes for screen sizes

--- a/feedback.html
+++ b/feedback.html
@@ -56,7 +56,8 @@
             <div class="solid-peach feedback-section senses-info-left">
                <div class="feedback-grid">
                   <div class="feedback-image">
-                     <img src="assets/images/dad-1.jpg" alt="a profile picture of a man with brown curly hair and glasses" class="profile-pictures">
+                     <img src="assets/images/dad-1.jpg"
+                        alt="a profile picture of a man with brown curly hair and glasses" class="profile-pictures">
                   </div>
                   <div>
                      <h4 class="feedback-heading">Simon Jeffery, Child age 6</h4>
@@ -72,7 +73,8 @@
                </div>
                <div class="feedback-grid">
                   <div class="feedback-image">
-                     <img src="assets/images/teacher-1.jpg" alt="a profile picture of a woman with blond hair smiling" class="profile-pictures">
+                     <img src="assets/images/teacher-1.jpg" alt="a profile picture of a woman with blond hair smiling"
+                        class="profile-pictures">
                   </div>
                   <div>
                      <h4 class="feedback-heading">Fiona Williams, Nursery Teacher</h4>
@@ -89,7 +91,8 @@
                </div>
                <div class="feedback-grid">
                   <div class="feedback-image">
-                     <img src="assets/images/mum-3.jpg" alt="a profile picture of a woman looking to the side and smiling" class="profile-pictures">
+                     <img src="assets/images/mum-3.jpg"
+                        alt="a profile picture of a woman looking to the side and smiling" class="profile-pictures">
                   </div>
                   <div>
                      <h4 class="feedback-heading">Debbie Angus, Children 1, 5 and 7</h4>
@@ -109,7 +112,8 @@
                </div>
                <div class="feedback-grid">
                   <div class="feedback-image">
-                     <img src="assets/images/mum-1.jpg" alt="a profile picture of a woman looking at the camera and smiling" class="profile-pictures">
+                     <img src="assets/images/mum-1.jpg"
+                        alt="a profile picture of a woman looking at the camera and smiling" class="profile-pictures">
                   </div>
                   <div>
                      <h4 class="feedback-heading">Jeanie Marks, Children 2 and 4</h4>
@@ -127,9 +131,10 @@
             <div id="recommendations-container">
                <h3 class="solid-pink feed-sub">Recommendations</h3>
                <div class="solid-pink feedback-section senses-info-left">
-                  <div class="feedback-grid">
+                  <div class="recommendations-grid">
                      <div class="feedback-image">
-                        <img src="assets/images/mum-4.jpg" alt="a profile picture of a woman leaning on a car and smiling" class="profile-pictures">
+                        <img src="assets/images/mum-4.jpg"
+                           alt="a profile picture of a woman leaning on a car and smiling" class="profile-pictures">
                      </div>
                      <div>
                         <h4 class="feedback-heading">Angela Jacobs, Children ages 1 and 3</h4>
@@ -146,9 +151,11 @@
                         </p>
                      </div>
                   </div>
-                  <div class="feedback-grid">
+                  <div class="recommendations-grid">
                      <div class="feedback-image">
-                        <img src="assets/images/mum-2.jpg" alt="a profile picture of a blond woman looking at the camera and smiling" class="profile-pictures">
+                        <img src="assets/images/mum-2.jpg"
+                           alt="a profile picture of a blond woman looking at the camera and smiling"
+                           class="profile-pictures">
                      </div>
                      <div>
                         <h4 class="feedback-heading">Jessica Suitcliffe, Child age 8</h4>
@@ -161,9 +168,11 @@
                         </p>
                      </div>
                   </div>
-                  <div class="feedback-grid">
+                  <div class="recommendations-grid">
                      <div class="feedback-image">
-                        <img src="assets/images/teacher-2.jpg" alt="a profile picture of a brunette woman looking at the camera and smiling" class="profile-pictures">
+                        <img src="assets/images/teacher-2.jpg"
+                           alt="a profile picture of a brunette woman looking at the camera and smiling"
+                           class="profile-pictures">
                      </div>
                      <div>
                         <h4 class="feedback-heading">Anna Reeves, Occupational Therapist</h4>
@@ -181,16 +190,17 @@
                         </p>
                      </div>
                   </div>
-                  <div class="feedback-grid">
+                  <div class="recommendations-grid">
                      <div class="feedback-image">
-                        <img src="assets/images/dad-2.jpg" alt="a profile picture of a man looking at the camera and smiling" class="profile-pictures">
+                        <img src="assets/images/dad-2.jpg"
+                           alt="a profile picture of a man looking at the camera and smiling" class="profile-pictures">
                      </div>
                      <div>
-                        <h4 class="feedback-heading">Andrew Edwards, Children 3 and 7</h4>
+                        <h4 class="feedback-heading">Andrew Edwards, Child 3</h4>
                         <p class="feedback-font">"I have learnt so much since I started using this site. I have also
                            come up with some creative
                            sensory ideas
-                           myself. The best thing is, you don't even need to make anything. When we go out to the
+                           myself. When we go out to the
                            seaside,
                            we
                            have a nature
