Validate and format code after testing changes

--- a/contact.html
+++ b/contact.html
@@ -1,139 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-   <!--Code Institute Template - meta included-->
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!--Meta Description-->
-   <meta name="description"
-      content="Play Eternal sensory play information and activities for parents of young children">
-   <!--Keywords-->
-   <meta name="keywords"
-      content="sensory play, childhood development, sensory play activities, sensory play for anxiety">
-   <!--Link to CSS stylesheet-->
-   <link rel="stylesheet" href="assets/css/stylesheet.css">
-   <!--Page Title-->
-   <title>Play Eternal</title>
-</head>
-
-<body>
-   <!--Header-->
-   <header id="header">
-      <h1 id="logo">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i>
-      </h1>
-      <!--Navigation Menu-->
-      <nav id="menu">
-         <ul>
-            <!--Dropdown from W3 school tutorial for dropdown menu - adjusted for this site
+   <head>
+      <!--Code Institute Template - meta included-->
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--Meta Description-->
+      <meta name="description"
+         content="Play Eternal sensory play information and activities for parents of young children">
+      <!--Keywords-->
+      <meta name="keywords"
+         content="sensory play, childhood development, sensory play activities, sensory play for anxiety">
+      <!--Link to CSS stylesheet-->
+      <link rel="stylesheet" href="assets/css/stylesheet.css">
+      <!--Page Title-->
+      <title>Play Eternal</title>
+   </head>
+   <body>
+      <!--Header-->
+      <header id="header">
+         <h1 id="logo">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i>
+         </h1>
+         <!--Navigation Menu-->
+         <nav id="menu">
+            <ul>
+               <!--Dropdown from W3 school tutorial for dropdown menu - adjusted for this site
                   https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_navbar-->
-            <li><a href="index.html">Home</a></li>
-            <li class="dropdown">
-               <a href="about.html" class="dropbtn">All About
+               <li><a href="index.html">Home</a></li>
+               <li class="dropdown">
+                  <a href="about.html" class="dropbtn">All About
                   Sensory Play</a>
-               <div class="dropdown-content">
-                  <a href="about.html#sec1">What is Sensory Play?</a>
-                  <a href="about.html#sec2">Play in Motion</a>
-                  <a href="about.html#sec3">Activities</a>
-                  <a href="about.html#sec4">Help with Anxiety</a>
-               </div>
-            </li>
-            <li><a href="feedback.html">Hear From Each Other</a></li>
-            <li><a href="contact.html" class="active">Get In Touch</a></li>
-         </ul>
-      </nav>
-   </header>
-   <!--The div content section is added to allow for enough content padding when styling for the sticky header bar-->
-   <div class="content">
-      <section>
-         <!--Contact Us section-->
-         <div id="contact-us-heading">
-            <h2> Get In Touch</h2>
-            <h3>We would love to hear from you</h3>
-            <img src="assets/images/contact-us-small.jpg" alt="young boy playing in sandpit" id="young-boy-sandpit">
-            <div id="contact-us-area">
-               <div id="form-background">
-                  <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
-                     <label for="name" class="form-labels"> Name </label><input type="text" id="name" name="first-name"
-                        required class="form-input">
-                     <label for="surname" class="form-labels">Surname </label><input type="text" id="surname"
-                        name="last-name" required class="form-input">
-                     <label for="email" class="form-labels">Email Address </label><input type="email" id="email"
-                        name="email-address" required class="form-input">
-                     <label for="ages-kids" class="form-labels">Child/Children's Age/s </label><input type="text"
-                        id="ages-kids" name="ages-of-children" required class="form-input">
-                     <p class="form-labels">Feedback <p>
-                     <div id="radio-feedback-area">
-                        <input type="radio" id="feedback-choice-one" name="feedback-choice"
-                           value="The site met all of my needs" class="radio-feedback" required><label
-                           for="feedback-choice-one" class="radio-feedback">The site
+                  <div class="dropdown-content">
+                     <a href="about.html#sec1">What is Sensory Play?</a>
+                     <a href="about.html#sec2">Play in Motion</a>
+                     <a href="about.html#sec3">Activities</a>
+                     <a href="about.html#sec4">Help with Anxiety</a>
+                  </div>
+               </li>
+               <li><a href="feedback.html">Hear From Each Other</a></li>
+               <li><a href="contact.html" class="active">Get In Touch</a></li>
+            </ul>
+         </nav>
+      </header>
+      <!--The div content section is added to allow for enough content padding when styling for the sticky header bar-->
+      <div class="content">
+         <section>
+            <!--Contact Us section-->
+            <div id="contact-us-heading">
+               <h2> Get In Touch</h2>
+               <h3>We would love to hear from you</h3>
+               <img src="assets/images/contact-us-small.jpg" alt="young boy playing in sandpit" id="young-boy-sandpit">
+               <div id="contact-us-area">
+                  <div id="form-background">
+                     <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
+                        <label for="name" class="form-labels"> Name </label><input type="text" id="name" name="first-name"
+                           required class="form-input">
+                        <label for="surname" class="form-labels">Surname </label><input type="text" id="surname"
+                           name="last-name" required class="form-input">
+                        <label for="email" class="form-labels">Email Address </label><input type="email" id="email"
+                           name="email-address" required class="form-input">
+                        <label for="ages-kids" class="form-labels">Child/Children's Age/s </label><input type="text"
+                           id="ages-kids" name="ages-of-children" required class="form-input">
+                        <p class="form-labels">Feedback 
+                        <p>
+                        <div id="radio-feedback-area">
+                           <input type="radio" id="feedback-choice-one" name="feedback-choice"
+                              value="The site met all of my needs" class="radio-feedback" required><label
+                              for="feedback-choice-one" class="radio-feedback">The site
                            met all of my needs</label>
-                        <input type="radio" id="feedback-choice-two" name="feedback-choice"
-                           value="The site met some of my needs" class="radio-feedback"><label for="feedback-choice-two"
-                           class="radio-feedback">The site met some
+                           <input type="radio" id="feedback-choice-two" name="feedback-choice"
+                              value="The site met some of my needs" class="radio-feedback"><label for="feedback-choice-two"
+                              class="radio-feedback">The site met some
                            of my needs</label>
-                        <input type="radio" id="feedback-choice-three" name="feedback-choice"
-                           value="The site met very few of my needs" class="radio-feedback"><label
-                           for="feedback-choice-three" class="radio-feedback">The site
+                           <input type="radio" id="feedback-choice-three" name="feedback-choice"
+                              value="The site met very few of my needs" class="radio-feedback"><label
+                              for="feedback-choice-three" class="radio-feedback">The site
                            met very few of my needs</label>
-                     </div>
-                     <label for="feedback-page" class="form-labels">Feedback on our website </label>
-                     <textarea id="feedback-page" name="feedback-on-website"
-                        class="text-area-pane">Please provide us with any feedback on our site...</textarea>
-                     <label for="questions" class="form-labels">Questions </label>
-                     <textarea id="questions" name="questions"
-                        class="text-area-pane">Please ask us any questions/enquiries you may have...</textarea>
-                     <label for="recommendations-page" class="form-labels">Recommendations </label>
-                     <textarea id="recommendations-page" name="Recommendations"
-                        class="text-area-pane">Let us know any personal Sensory Play recommendations you would like to make...</textarea>
-                     <button class="submit-info" type="submit">Submit</button>
-                  </form>
+                        </div>
+                        <label for="feedback-page" class="form-labels">Feedback on our website </label>
+                        <textarea id="feedback-page" name="feedback-on-website"
+                           class="text-area-pane">Please provide us with any feedback on our site...</textarea>
+                        <label for="questions" class="form-labels">Questions </label>
+                        <textarea id="questions" name="questions"
+                           class="text-area-pane">Please ask us any questions/enquiries you may have...</textarea>
+                        <label for="recommendations-page" class="form-labels">Recommendations </label>
+                        <textarea id="recommendations-page" name="Recommendations"
+                           class="text-area-pane">Let us know any personal Sensory Play recommendations you would like to make...</textarea>
+                        <button class="submit-info" type="submit">Submit</button>
+                     </form>
+                  </div>
                </div>
             </div>
-         </div>
-      </section>
-   </div>
-   <footer>
-      <!--Footer-->
-      <div id="footer-logo">
-         <a href="index.html">
-            <i class="fas fa-hand-holding-heart"></i>
-            <h4>Play Eternal</h4>
-         </a>
-         <br>
-         <p>Copyright@ClairePotter2021</p>
+         </section>
       </div>
-      <ul>
-         <li><a href="https://www.facebook.com/" target="_blank" aria-label="a link to facebook" rel="noreferrer"><i
-                  class="fab fa-facebook-square"></i></a></li>
-         <li><a href="https://www.instagram.com/" target="_blank" aria-label="a link to instagram" rel="noreferrer"><i
-                  class="fab fa-instagram-square"></i></a>
-         </li>
-         <li><a href="https://twitter.com/" target="_blank" aria-label="a link to twitter" rel="noreferrer"><i
-                  class="fab fa-twitter-square"></i></a></li>
-      </ul>
-   </footer>
-   <!-- Font awesome script-->
-   <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
-   <!--Javascript from W3 schools tutorial for sticky nav bar
+      <footer>
+         <!--Footer-->
+         <div id="footer-logo">
+            <a href="index.html">
+               <i class="fas fa-hand-holding-heart"></i>
+               <h4>Play Eternal</h4>
+            </a>
+            <br>
+            <p>Copyright@ClairePotter2021</p>
+         </div>
+         <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" aria-label="a link to facebook" rel="noreferrer"><i
+               class="fab fa-facebook-square"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" aria-label="a link to instagram" rel="noreferrer"><i
+               class="fab fa-instagram-square"></i></a>
+            </li>
+            <li><a href="https://twitter.com/" target="_blank" aria-label="a link to twitter" rel="noreferrer"><i
+               class="fab fa-twitter-square"></i></a></li>
+         </ul>
+      </footer>
+      <!-- Font awesome script-->
+      <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
+      <!--Javascript from W3 schools tutorial for sticky nav bar
          https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky-->
-   <script>
-      window.onscroll = function () {
-         myFunction()
-      }
-
-      var header = document.getElementById("header");
-      var sticky = header.offsetTop;
-
-      function myFunction() {
-         if (window.pageYOffset >= sticky) {
-            header.classList.add("sticky")
-         } else {
-            header.classList.remove("sticky");
+      <script>
+         window.onscroll = function () {
+            myFunction()
          }
-      }
-   </script>
-</body>
-
+         
+         var header = document.getElementById("header");
+         var sticky = header.offsetTop;
+         
+         function myFunction() {
+            if (window.pageYOffset >= sticky) {
+               header.classList.add("sticky")
+            } else {
+               header.classList.remove("sticky");
+            }
+         }
+      </script>
+   </body>
 </html>
