Add spelling corrections and slight screen adjustments

--- a/about.html
+++ b/about.html
@@ -308,10 +308,10 @@
                   underlying anxiety.
                   A great way to help kids with anxiety is to bolster up their sense of self so they can distance
                   themselves from their feelings. One of the best ways to help kids re-center when they are feeling
-                  worried or upset to engage them in sensory play that, but it’s very nature is immersive and mindful.
+                  worried or upset is to engage them in sensory play, its very nature is immersive and mindful.
                </p>
             </div>
-            <h3 class="sections-headers">6 Mindful and Sensory Activities to Help Kids Regulate Emotions and Re-Centre
+            <h3 class="sections-headers">6 Mindful and Sensory Activities <br> to Help Kids Regulate Emotions and Re-Centre
             </h3>
             <div id="anxiety-pane">
                <figure class="grid-figure">
@@ -322,7 +322,7 @@
                      <div class="tooltip">1. Sensory Scavenger Hunt.<span class="tooltiptext">A sensory scavenger
                         hunt
                         helps kids
-                        ground themselves in the things that they like to see, smell, feel, listen to, and
+                        ground themselves in the things that they like to see, smell, feel, listen to and
                         taste.</span>
                      </div>
                   </figcaption>
